<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/product_name_row"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/product_row_name"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/product_price_row"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/product_quantity_row"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="256dp"
        android:text="@string/product_row_quantity"
        app:layout_constraintBottom_toTopOf="@+id/product_price_row"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/product_name_row"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/product_price_row"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/product_row_price"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/product_name_row" />


</androidx.constraintlayout.widget.ConstraintLayout>