<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relativeLayout"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="292dp"
        android:layout_height="38dp"
        android:gravity="center"
        android:hint="@string/product_type"
        app:layout_constraintBottom_toTopOf="@+id/table"
        app:layout_constraintEnd_toStartOf="@+id/manger"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/manger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/DarkSeaGreen"
        android:text="@string/manger"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:backgroundTint="@color/DarkSeaGreen"
                android:text="@string/one"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:backgroundTint="@color/DarkSeaGreen"
                android:text="@string/two"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:backgroundTint="@color/DarkSeaGreen"
                android:text="@string/three"
                android:textColor="@color/black" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:backgroundTint="@color/DarkSeaGreen"
                android:text="@string/four"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:backgroundTint="@color/DarkSeaGreen"
                android:text="@string/five"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:backgroundTint="@color/DarkSeaGreen"
                android:text="@string/six"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/seven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:backgroundTint="@color/DarkSeaGreen"
                android:text="@string/seven"
                android:textColor="@color/black"

                />

            <Button
                android:id="@+id/eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:backgroundTint="@color/DarkSeaGreen"
                android:text="@string/eight"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/nine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:backgroundTint="@color/DarkSeaGreen"
                android:text="@string/nine"
                android:textColor="@color/black" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:backgroundTint="@color/DarkSeaGreen"
                android:text="@string/clear"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:backgroundTint="@color/DarkSeaGreen"
                android:text="@string/zero"
                android:textColor="@color/black"

                />

        </TableRow>
    </TableLayout>




    <TextView
        android:id="@+id/total"
        android:layout_width="100dp"
        android:layout_height="wrap_content"

        android:text="@string/total"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/manger" />
    <Button
        android:id="@+id/buy"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:backgroundTint="@color/DarkSeaGreen"
        android:text="@string/buy"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/table"
        app:layout_constraintTop_toBottomOf="@+id/total"
        app:layout_constraintBottom_toBottomOf="@id/table"
        />

<!--    <Button-->
<!--        android:id="@+id/one"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="0dp"-->
<!--        android:backgroundTint="@color/DarkSeaGreen"-->
<!--        android:text="@string/one"-->
<!--        android:textColor="@color/black"-->

<!--        app:layout_constraintHorizontal_chainStyle="spread"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView" />-->

<!--    <Button-->
<!--        android:id="@+id/two"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="0dp"-->
<!--        android:backgroundTint="@color/DarkSeaGreen"-->
<!--        android:text="@string/two"-->
<!--        android:textColor="@color/black"-->

<!--        app:layout_constraintTop_toBottomOf="@+id/textView"-->
<!--        app:layout_constraintStart_toEndOf="@id/one"-->


<!--    />-->
<!--    <Button-->
<!--        android:id="@+id/three"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="0dp"-->
<!--        android:backgroundTint="@color/DarkSeaGreen"-->
<!--        android:text="@string/three"-->
<!--        android:textColor="@color/black"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView"-->
<!--        app:layout_constraintStart_toEndOf="@id/two"-->
<!--        app:layout_constraintHorizontal_chainStyle="spread"-->

<!--        />-->


<!--    <Button-->
<!--        android:id="@+id/four"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="0dp"-->
<!--        android:backgroundTint="@color/DarkSeaGreen"-->
<!--        android:text="@string/four"-->
<!--        android:textColor="@color/black"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/one"-->
<!--        />-->

<!--    <Button-->
<!--        android:id="@+id/five"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="0dp"-->
<!--        android:backgroundTint="@color/DarkSeaGreen"-->
<!--        android:text="@string/five"-->
<!--        android:textColor="@color/black"-->
<!--        app:layout_constraintTop_toBottomOf="@id/two"-->
<!--        app:layout_constraintStart_toEndOf="@id/four"-->

<!--        />-->

<!--    <Button-->
<!--        android:id="@+id/six"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="0dp"-->
<!--        android:backgroundTint="@color/DarkSeaGreen"-->
<!--        android:text="@string/six"-->
<!--        android:textColor="@color/black"-->

<!--        app:layout_constraintTop_toBottomOf="@id/three"-->
<!--        app:layout_constraintStart_toEndOf="@id/five"-->
<!--         />-->

<!--    <Button-->
<!--        android:id="@+id/seven"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="0dp"-->
<!--        android:backgroundTint="@color/DarkSeaGreen"-->
<!--        android:text="@string/seven"-->
<!--        android:textColor="@color/black"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/four"-->
<!--        />-->


<!--    <Button-->
<!--        android:id="@+id/eight"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="0dp"-->
<!--        android:backgroundTint="@color/DarkSeaGreen"-->
<!--        android:text="@string/eight"-->
<!--        android:textColor="@color/black"-->

<!--        app:layout_constraintTop_toBottomOf="@id/five"-->
<!--        app:layout_constraintStart_toEndOf="@id/seven"-->
<!--/>-->

<!--    <Button-->
<!--        android:id="@+id/nine"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="0dp"-->
<!--        android:backgroundTint="@color/DarkSeaGreen"-->
<!--        android:text="@string/nine"-->
<!--        android:textColor="@color/black"-->
<!--        app:layout_constraintTop_toBottomOf="@id/six"-->
<!--        app:layout_constraintStart_toEndOf="@id/eight"-->
<!--      />-->

<!--    <LinearLayout-->
<!--        android:id="@+id/linearLayout"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="0dp"-->
<!--        android:orientation="horizontal"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/seven">-->

<!--        <Button-->
<!--            android:id="@+id/clear"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:backgroundTint="@color/DarkSeaGreen"-->
<!--            android:text="@string/clear"-->
<!--            android:textColor="@color/black"-->
<!--            app:layout_constraintTop_toBottomOf="@id/seven"-->
<!--            />-->

<!--        <Button-->
<!--            android:id="@+id/zero"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:backgroundTint="@color/DarkSeaGreen"-->
<!--            android:text="@string/zero"-->
<!--            android:textColor="@color/black"-->
<!--            app:layout_constraintStart_toEndOf="@id/clear"-->
<!--            app:layout_constraintTop_toBottomOf="@id/eight"-->

<!--            />-->
<!--    </LinearLayout>-->

    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/quantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/table" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />
    <ListView
        android:id="@+id/product_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantity"
         />





</androidx.constraintlayout.widget.ConstraintLayout>